# Course-order-assistant

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: core.rs  main.rs
