[package]
name = "Course-order-assistant"
description = "A course order assistant for NTUST"
version = "1.0.0"
edition = "2021"

[package.metadata.winresource]
OriginalFilename = "選課志願序小幫手.exe"
LegalCopyright = "Copyright © 2024 NTUST-Tool"


[build-dependencies]
winresource = "0.1"

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "native-tls-vendored"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0"
tabled = "0.17.0"
regex = "1.11.1"
kdam = { version = "0.6.1", features = ["spinner", "template"] }
futures = "0.3.31"

[[bin]]
name = "Course-order-assistant"
path = "src/main.rs"
